remove more deprectaion warnings for Class.forName().newInstance()