@@ -11,6 +11,7 @@
 package edu.kit.scc.webreg.service.timer;
 
 import java.io.Serializable;
+import java.lang.reflect.InvocationTargetException;
 import java.util.Date;
 import java.util.List;
 
@@ -104,7 +105,7 @@ public class StandardSchedulerImpl implements StandardScheduler, Serializable {
 		logger.debug("----StandardScheduler invokes: {} [{}]", jobClass.getName(), jobClass.getJobClassName());
 
 		try {
-			Object o = Class.forName(jobClass.getJobClassName()).newInstance();
+			Object o = Class.forName(jobClass.getJobClassName()).getConstructor().newInstance();
 			if (o instanceof ExecutableJob) {
 				ExecutableJob job = (ExecutableJob) o;
 				job.setJobStore(jobClass.getJobStore());
@@ -113,11 +114,7 @@ public class StandardSchedulerImpl implements StandardScheduler, Serializable {
 			else {
 				logger.warn("Could not execute job {} ({}): not instance of ExecutableJob", jobClass.getName(), jobClass.getJobClassName());
 			}
-		} catch (InstantiationException e) {
-			logger.warn("Could not execute job {} ({}): {}",  jobClass.getName(), jobClass.getJobClassName(), e.toString());
-		} catch (IllegalAccessException e) {
-			logger.warn("Could not execute job {} ({}): {}",  jobClass.getName(), jobClass.getJobClassName(), e.toString());
-		} catch (ClassNotFoundException e) {
+		} catch (InstantiationException | IllegalAccessException | ClassNotFoundException | NoSuchMethodException | InvocationTargetException e) {
 			logger.warn("Could not execute job {} ({}): {}",  jobClass.getName(), jobClass.getJobClassName(), e.toString());
 		}
 	}
